<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mensagem"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quanto_tempo"
        android:textColor="@android:color/holo_blue_light"
        android:layout_below="@+id/textView"/>

    <RadioGroup
        android:id="@+id/idRadioGroupTempo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1">

        <RadioButton
            android:id="@+id/idRadioButtonTempoCurto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tempo_curto" />

        <RadioButton
            android:id="@+id/idRadioButtonTempoLongo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo_longo" />

    </RadioGroup>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quanto_posicao"
        android:textColor="@android:color/holo_blue_light"
        android:layout_below="@+id/idRadioGroupTempo"/>

    <RadioGroup
        android:id="@+id/idRadioGroupPosicao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2">

        <RadioButton
            android:id="@+id/idRadioButtonCentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/centro" />
        <RadioButton
            android:id="@+id/idRadioButtonEmBaixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/em_baixo" />
        <RadioButton
            android:id="@+id/idRadioButtonEmCima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/em_cima" />

    </RadioGroup>


    <Button
        android:id="@+id/idBtnMostraMensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idRadioGroupPosicao"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:onClick="onClickMostraMensagem"
        android:text="@string/mostra_mensagem"
        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_customisado"
        android:id="@+id/idBtnToastCustomisado"
        android:onClick="onCLickToastCustomizado"
        android:layout_below="@+id/idBtnMostraMensagem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" />

</RelativeLayout>
